--- a/src/components/home/1. Presentation.astro
+++ b/src/components/home/1. Presentation.astro
@@ -16,9 +16,18 @@ const t = useTranslations(lang);
     </p>
   </div>
   <div class="order-first md:order-last">
+
     <div class="polygon-shadow">
       <img src="/kevin.webp" class="kev-image m-auto" alt="Kevin Fiorentino" />
     </div>
+
+    <div class="flex justify-center items-center my-4">
+      <svg class="media-icon mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="25" height="25" class="mr-2">
+        <path d="M256 0C156.456 0 76 80.456 76 180c0 67.771 43.782 157.217 130.19 273.682.387.557.824 1.047 1.314 1.449l12.496 10.247c8.03 6.592 18.655 10.184 29.96 10.184s21.931-3.592 29.96-10.184l12.496-10.247c.49-.402.927-.892 1.314-1.449C392.218 337.217 436 247.771 436 180 436 80.456 355.544 0 256 0zm0 208c-30.928 0-56-25.072-56-56s25.072-56 56-56 56 25.072 56 56-25.072 56-56 56z"/>
+      </svg>
+      <p class="text-black-400 dark:text-white text-lg">Buenos Aires, Argentina</p>
+    </div>
+
     <ul class="mt-4 flex justify-center items-center gap-6">
       <li>
         <a href="https://www.linkedin.com/in/kevinfiorentino/" title="LinkedIn" target="_blank" rel="noreferrer" class="footer-icon">
@@ -53,6 +62,7 @@ const t = useTranslations(lang);
         </a>
       </li>
     </ul>
+
   </div>
 </section>
 
