--- a/src/pages/[lang]/blog/[category]/index.astro
+++ b/src/pages/[lang]/blog/[category]/index.astro
@@ -41,7 +41,7 @@ const post = Astro.props;
 <MainLayout
   title={`Blog ${param.category} | Kevin Fiorentino`}
   description={`Kevin Fiorentino's blog about ${post.category}`}
-  image="/kevin.webp"
+  image='/kevin.webp'
   addWidth={true}
 >
   <div>
