Change content structure

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -22,7 +22,7 @@ const {
 ---
 
 <article class="blog-card relative" role="listitem">
-  <a href={`/${lang}/blog/${collection}/${slug.slice(3)}`} title={ title } class="flex relative">
+  <a href={`/${lang}/blog/${collection}/${slug}`} title={ title } class="flex relative">
 
     <div class="flex flex-1 flex-col justify-between p-3">
       <div class="mb-3">
