--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -26,7 +26,7 @@ const {
 
     <div class="flex flex-1 flex-col justify-between p-3">
       <div class="mb-3">
-        <h3 class="text-white font-bold uppercase">
+        <h3 class="text-white font-bold">
           { title }
         </h3>
         <p class="mt-2 text-sm leading-relaxed dark:text-white">
@@ -37,7 +37,7 @@ const {
         <span class="post-collection capitalize">
           { collection }
         </span>
-        <div class="btn-read dark:text-white text-center font-bold uppercase">
+        <div class="btn-read dark:text-white text-center font-bold">
           {t('read-post')}
         </div>
       </div>
