--- a/src/components/home/1. Presentation.astro
+++ b/src/components/home/1. Presentation.astro
@@ -66,6 +66,16 @@ const t = useTranslations(lang);
   </div>
 </section>
 
+<style is:global lang="scss">
+.dark {
+  .media-icon {
+    path {
+      fill: var(--white);
+    }
+  }
+}
+</style>
+
 <style lang="scss">
 .kev-image {
   max-height: 280px;
