--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -26,7 +26,7 @@ const {
 
     <div class="flex flex-1 flex-col justify-between p-3">
       <div class="mb-3">
-        <h3 class="text-white font-bold">
+        <h3 class="font-bold">
           { title }
         </h3>
         <p class="mt-2 text-sm leading-relaxed dark:text-white">
@@ -37,7 +37,7 @@ const {
         <span class="post-collection capitalize">
           { collection }
         </span>
-        <div class="btn-read dark:text-white text-center font-bold">
+        <div class="btn-read text-gray-400 dark:text-white text-center font-bold">
           {t('read-post')}
         </div>
       </div>
@@ -50,7 +50,6 @@ const {
   border-left: 2px solid var(--primary);
 
   h3 {
-    color: var(--black);
     line-height: 30px;
   }
   .post-collection {
@@ -65,6 +64,17 @@ const {
   }
   &:hover {
     box-shadow: 0 3px 6px #2596BE29;
+  }
+}
+
+</style>
+
+<style is:global lang="scss">
+.dark {
+  .blog-card {
+    h3 {
+      -webkit-text-fill-color: var(--white) !important;
+    }
   }
 }
 </style>
