--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -57,20 +57,11 @@ hr {
 }
 
 .dark {
-
-  p,
-  li {
+  p, li {
     color: var(--white);
   }
-
   hr {
     border-color: var(--white);
-  }
-
-  .lang-icon, .media-icon {
-    path {
-      fill: var(--white);
-    }
   }
 }
 
@@ -89,7 +80,6 @@ hr {
   background-position: 0%;
 }
 
-
 .cards-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -106,7 +96,6 @@ hr {
     padding: 1rem;
   }
 }
-
 
 .bg-polygon::before, .bg-polygon::after {
   content: "";
@@ -132,14 +121,6 @@ hr {
 .polygon-shadow {
   filter: drop-shadow(0px 2px 2px var(--black));
 }
-
-.dark {
-  // I can't write this in the footer component
-  footer, footer::before {
-    background: #000000;
-  }
-}
-
 
 .badges {
   display: flex;
