--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -4,6 +4,7 @@ export interface Props {
   collection: string;
 	title: string;
   description: string;
+  image: string;
   pubDate: Date;
 }
 
@@ -17,6 +18,7 @@ const {
   collection,
   title,
   description,
+  image,
   pubDate,
 } = Astro.props;
 ---
@@ -26,9 +28,12 @@ const {
 
     <div class="flex flex-1 flex-col justify-between p-3">
       <div class="mb-3">
-        <h3 class="font-bold">
-          { title }
-        </h3>
+        <div class="flex justify-start align-center">
+          <img class="mr-2" src={image} alt={title}>
+          <h3 class="font-bold">
+            { title }
+          </h3>
+        </div>
         <p class="mt-2 text-sm leading-relaxed dark:text-white">
           { description }
         </p>
@@ -50,7 +55,14 @@ const {
   border-left: 2px solid var(--primary);
 
   h3 {
-    line-height: 30px;
+    line-height: 35px;
+    margin-bottom: 0;
+  }
+  img {
+    width: 35px;
+    height: 35px;
+    object-fit: contain;
+    box-shadow: none;
   }
   .post-collection {
     color: var(--white);
