--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ const langToSwith = currentLang === 'es' ? 'en' : 'es';
 
 ---
 <header aria-label="Page Header" class="bg-gray-200 bg-dark">
-  <div class="mx-auto max-w-screen-xl px-4 py-6 sm:py-10 sm:px-6 lg:px-8">
+  <div class="mx-auto max-w-screen-xl px-3 py-6 sm:py-10 sm:px-6 lg:px-5">
 
     <nav>
       <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
@@ -21,7 +21,7 @@ const langToSwith = currentLang === 'es' ? 'en' : 'es';
 
             <div class="text-center sm:text-left">
               <a href={`/${lang}`} class="text-2xl font-bold text-gray-800 dark:text-white">
-                Kevin Fiorentino —△🌈
+                Kevin Fiorentino <span class="hidden md:inline">—△🌈</span>
               </a>
               <p class="mt-1.5 text-sm">
                 Solutions Architect | Bachelor's in Information Systems
@@ -50,7 +50,7 @@ const langToSwith = currentLang === 'es' ? 'en' : 'es';
                     <path class="fill-alternative" stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z"></path>
                   </svg>
                 </button>
-                <a href={`/${langToSwith}/${urlWithoutLang}`} class={`flex justify-center items-center ml-6`} title={`${langToSwith}`}>
+                <a href={`/${langToSwith}/${urlWithoutLang}`} class="flex justify-center items-center ml-4" title={langToSwith}>
                   <svg class="lang-icon h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                     <path d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q83 0 155.5 31.5t127 86q54.5 54.5 86 127T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Zm0-82q26-36 45-75t31-83H404q12 44 31 83t45 75Zm-104-16q-18-33-31.5-68.5T322-320H204q29 50 72.5 87t99.5 55Zm208 0q56-18 99.5-55t72.5-87H638q-9 38-22.5 73.5T584-178ZM170-400h136q-3-20-4.5-39.5T300-480q0-21 1.5-40.5T306-560H170q-5 20-7.5 39.5T160-480q0 21 2.5 40.5T170-400Zm216 0h188q3-20 4.5-39.5T580-480q0-21-1.5-40.5T574-560H386q-3 20-4.5 39.5T380-480q0 21 1.5 40.5T386-400Zm268 0h136q5-20 7.5-39.5T800-480q0-21-2.5-40.5T790-560H654q3 20 4.5 39.5T660-480q0 21-1.5 40.5T654-400Zm-16-240h118q-29-50-72.5-87T584-782q18 33 31.5 68.5T638-640Zm-234 0h152q-12-44-31-83t-45-75q-26 36-45 75t-31 83Zm-200 0h118q9-38 22.5-73.5T376-782q-56 18-99.5 55T204-640Z">
                     </path>
@@ -61,7 +61,7 @@ const langToSwith = currentLang === 'es' ? 'en' : 'es';
                 </a>
               </div>
 
-              <div class="inset-y-0 left-0 flex items-center md:hidden">
+              <div class="inset-y-0 left-0 flex items-center md:hidden ml-2">
                 <!-- Mobile menu button -->
                 <button id="toggle-mobile-menu" type="button" class="inline-flex items-center justify-center rounded-md text-gray-400 hover:opacity-75 focus:ring-2 focus:ring-inset focus:ring-blue p-2" aria-controls="mobile-menu" aria-expanded="false">
                   <span class="sr-only">Open main menu</span>
@@ -160,5 +160,4 @@ const langToSwith = currentLang === 'es' ? 'en' : 'es';
     fill: #6B7280;
   }
 }
-// The dark-mode of lang-icon is in global.scss
 </style>
