--- a/src/components/articles/ToC.astro
+++ b/src/components/articles/ToC.astro
@@ -1,5 +1,5 @@
 ---
-/* import ArrowIcon from "./icons/ArrowIcon.astro"; */
+import ArrowIcon from "./ArrowIcon.astro";
 import type { MarkdownHeading } from "astro";
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 import generateToc from "@utils/generateToc";
@@ -18,7 +18,7 @@ const toc = generateToc(headings);
 <div class="sticky top-16 w-full border-b p-3 xl:block xl:p-02">
   <button id="toc-button" class="rounded-md border px-2 py-1 text-sm font-medium xl:hidden">
     {t('blog.toc')}
-    <!-- <ArrowIcon class="inline h-4 w-4 fill-zinc-400 transition-all" /> -->
+    <ArrowIcon class="inline h-4 w-4 fill-zinc-400 transition-all" />
   </button>
   <span id="toc-title" class="ml-2 text-sm font-medium text-zinc-500 xl:hidden">
     Title
