--- a/src/components/articles/NavigationButton.astro
+++ b/src/components/articles/NavigationButton.astro
@@ -13,9 +13,10 @@ const { icon = false, prev = false, label, title } = Astro.props;
 
 <a
   {...Astro.props}
-  class={`card-shadow not-prose block flex-[1_0_40%] hover:border-zinc-400 rounded-xl border border-zinc-200 px-4 py-2 transition-all hover:scale-[102%] ${
-    !prev && "text-end"
-  }`}
+  class={
+    `card card-shadow not-prose block flex-[1_0_40%] px-4 py-2 transition hover:scale-[102%]
+    ${ !prev && "text-end" }`
+  }
   title={title}
 >
   <span class={`flex items-center gap-2 ${!prev && "flex-row-reverse"}`}>
@@ -24,11 +25,19 @@ const { icon = false, prev = false, label, title } = Astro.props;
         <ArrowIcon
           class={`${
             prev ? "rotate-90" : "-rotate-90"
-          } inline h-5 fill-zinc-900`}
+          } inline h-4 fill-zinc-500 dark:fill-white`}
         />
       )
     }
-    <span class="mb-0.5 text-lg font-semibold text-zinc-900">{label}</span>
+    <span class="mb-0.5 text-lg font-normal text-zinc-500 dark:text-white">
+      {label}
+    </span>
   </span>
   <slot />
 </a>
+
+<style lang="scss">
+.card:hover {
+  outline: 1px solid var(--primary);
+}
+</style>
