--- a/src/components/articles/PrevNext.astro
+++ b/src/components/articles/PrevNext.astro
@@ -1,7 +1,7 @@
 ---
-import { getEntry, getEntryBySlug } from "astro:content";
+import { getEntry } from 'astro:content';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
-import NavigationButton from "./NavigationButton.astro";
+import NavigationButton from './NavigationButton.astro';
 
 interface Props {
   category?: string;
