--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,6 +1,5 @@
 ---
-import { getCollection } from 'astro:content';
-import { collectionMetadata } from '@content/config';
+import { getEntry } from 'astro:content';
 import { languages } from '@i18n/ui';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 import MainLayout from '@layouts/MainLayout.astro';
@@ -16,24 +15,20 @@ export async function getStaticPaths() {
   const pages: any[] = [];
   let allPosts: any[] = [];
 
-  for await (let c of collectionMetadata) {
-    const coll = await getCollection(c.name as any);
-    allPosts = allPosts.concat(coll);
-  }
+  const p1 = await getEntry('blockchain', 'web2-vs-web3');
+  const p2 = await getEntry('solana', 'behind-solana');
+  const p3 = await getEntry('ethereum', 'erc20-token');
+  const p4 = await getEntry('solidity', 'reentrancy-attack');
+  const p5 = await getEntry('openzeppelin', 'escrow');
+  const p6 = await getEntry('bitcoin', 'architecture');
 
-  allPosts = allPosts.sort((a, b) => {
-    if (new Date(a.data.pubDate) < new Date(b.data.pubDate))
-      return 1;
-    if (new Date(a.data.pubDate) > new Date(b.data.pubDate))
-      return -1;
-    return 0;
-  });
+  allPosts.push(p1, p2, p3, p4, p5, p6);
 
   Object.keys(languages).forEach((l: string) => {
     pages.push({
       params: { lang: l },
       props: {
-        posts: allPosts.slice(0, 6),
+        posts: allPosts,
       },
     });
   });
