Update text myself

--- a/src/components/home/1. Presentation.astro
+++ b/src/components/home/1. Presentation.astro
@@ -10,9 +10,16 @@ const t = useTranslations(lang);
       {t('home.kev')}
     </h1>
     <p class="mb-3">
-      {t('home.presentation1')} <br>
-      {t('home.presentation2')} <br>
+      {t('home.presentation1')}
+    </p>
+    <p class="mb-3">
+      {t('home.presentation2')}
+    </p>
+    <p class="mb-3">
       {t('home.presentation3')}
+    </p>
+    <p class="mb-3">
+      {t('home.presentation4')}
     </p>
   </div>
   <div class="order-first md:order-last">
