API and tech progress

--- a/src/components/articles/ToC.astro
+++ b/src/components/articles/ToC.astro
@@ -2,7 +2,7 @@
 import ArrowIcon from "./ArrowIcon.astro";
 import type { MarkdownHeading } from "astro";
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
-import generateToc from "@utils/generateToc";
+import generateToc from "@utils/generate-toc";
 
 interface Props {
   headings: MarkdownHeading[];
